--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-toastify": "^4.1.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-thunk": "^2.3.0",
+    "redux-persist": "^5.10.0",
     "formik": "^1.4.1",
     "moment": "^2.23.0",
     "node-sass": "^4.11.0",
@@ -46,8 +47,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "redux-persist": "^5.10.0"
-  }
+  ]
 }
