--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "echo Skip build on Heroku"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,5 +51,6 @@
   ],
   "engines": {
     "node": "^8.x"
-  }
+  },
+  "heroku-run-build-script": true
 }
